--- a/templates/login/login_success.html
+++ b/templates/login/login_success.html
@@ -6,7 +6,7 @@
     <div class="card text-center shadow p-4" style="max-width: 400px; width: 100%;">
         <div class="card-body">
             <h3 class="card-title text-success mb-3">Success!</h3>
-            <a href="{% url "login:index" %}" class="btn btn-primary mt-1">To main page</a>
+            <a href="{% url "index" %}" class="btn btn-primary mt-1">To main page</a>
         </div>
     </div>
 </div>
