--- a/templates/registration/register_success.html
+++ b/templates/registration/register_success.html
@@ -7,7 +7,7 @@
         <div class="card-body">
             <h3 class="card-title text-success mb-3">Success!</h3>
             <p class="card-text">Your email is confirmed</p>
-            <a href="{% url "registration:index" %}" class="btn btn-primary mt-1">To main page</a>
+            <a href="{% url "index" %}" class="btn btn-primary mt-1">To main page</a>
         </div>
     </div>
 </div>
