--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Registration{% endblock %}
+{% block title %}Django{% endblock %}
 {% block content %}
 <div class="d-flex flex-column justify-content-start align-items-center" style="height: 80vh; padding-top: 10vh;">
     <a href="{% url 'registration:index' %}" class="btn btn-primary w-50 mb-3 py-3">Register Form</a>
