--- a/templates/login/login_form.html
+++ b/templates/login/login_form.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
+{% block navbar %}Login{% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center mt-5">
     <form method="post" class="p-4 border rounded bg-light shadow" style="width: 500px;">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next }}">
         <div class="form-group mb-3">
             <label for="registerEmailInput">Email address</label>
             <input type="email"
