--- a/templates/registration/register_email_verification.html
+++ b/templates/registration/register_email_verification.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Registration{% endblock %}
+{% block navbar %}Registration{% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center mt-5">
     <form method="post" class="p-4 border rounded bg-light shadow" style="width: 500px;">
